Completed PS3 style centroid find. Similar results to before

--- a/15-12-30_centroids.ipynb
+++ b/15-12-30_centroids.ipynb
@@ -283,8 +283,488 @@
    },
    "outputs": [],
    "source": [
-    "# Re-doing my auto centroid finding using the automatic solution explained above\n",
-    "\n"
+    "# Re-doing my auto centroid finding using the automatic solution explained above"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Import Modules\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from mpl_toolkits.mplot3d import Axes3D\n",
+    "from scipy.fftpack import fft2,ifft2,fftshift\n",
+    "from speckle_fns import fits_import, circ_filter1\n",
+    "from speckle_fns import deconv0,deconv1, postprocess\n",
+    "from speckle_fns import filter_lpf, filter_hpf, filter_interference\n",
+    "from speckle_fns import fits_view\n",
+    "import sys\n",
+    "import cv2\n",
+    "import math\n",
+    "\n",
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Folder containing FITS files\n",
+    "fileDirectory = '/home/niels/Documents/FITS/'\n",
+    "\n",
+    "# Filenames (without extensions) of the Double/Reference pairs\n",
+    "# Preprocessed files must have _PSD terminations on them in the same folder\n",
+    "filenames=[ ['KP330','KP331'], \n",
+    "            ['KP332','KP333'], \n",
+    "            ['KP334','KP335'], \n",
+    "            ['KP336','KP338'], \n",
+    "            ['KP339','KP340'],\n",
+    "            ['KP341','KP342'] ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Select which set of data to use:\n",
+    "k = 0\n",
+    "\n",
+    "# View sample fits images:\n",
+    "imgDoubleStar = fits_view(fileDirectory+filenames[k][0]+'.fits',0)\n",
+    "imgSingleStar = fits_view(fileDirectory+filenames[k][1]+'.fits',0)\n",
+    "\n",
+    "plt.figure(figsize=(15,7))\n",
+    "plt.subplot(1,2,1)\n",
+    "plt.imshow(imgDoubleStar)\n",
+    "plt.title('Double Star Image')\n",
+    "plt.subplot(1,2,2)\n",
+    "plt.imshow(imgSingleStar)\n",
+    "plt.title('Reference Star Image')\n",
+    "\n",
+    "# Generating Autocorrelogram\n",
+    "# Import FITS file data\n",
+    "psdDoubleStar = fits_import(fileDirectory+filenames[k][0]+'_PSD.fits').astype(float)\n",
+    "psdSingleStar = fits_import(fileDirectory+filenames[k][1]+'_PSD.fits').astype(float)\n",
+    "\n",
+    "plt.figure(figsize=(15,15))\n",
+    "plt.imshow(fftshift(np.log10(psdDoubleStar)))\n",
+    "plt.title(\"Double Star PSD\")\n",
+    "\n",
+    "## Perform Deconvolution\n",
+    "constant = 1E-15\n",
+    "imgF = fftshift(deconv1(psdDoubleStar, psdSingleStar, constant))\n",
+    "\n",
+    "# Filter PSD:\n",
+    "imgF_filtered = filter_interference(imgF)\n",
+    "imgF_filtered = filter_lpf(imgF_filtered, 10)\n",
+    "\n",
+    "# Postprocess\n",
+    "img_autocorr = postprocess(imgF_filtered)\n",
+    "\n",
+    "# Plot Image\n",
+    "plt.figure(figsize = (8,8))\n",
+    "plt.imshow(img_autocorr)\n",
+    "plt.title(\"Autocorr of Filtered Image\")\n",
+    "plt.colorbar()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Want to find the lowest threshold that we only see the 3 main lobes\n",
+    "\n",
+    "# New variable for operating on\n",
+    "autocorr = img_autocorr\n",
+    "\n",
+    "# Start thresh at max value of autocorr (assuming that is from central peak)\n",
+    "threshold = np.floor(autocorr.max())\n",
+    "\n",
+    "# Calculate values to increment/decrement threshold by depending on height of autocorrelogram\n",
+    "increment_coarse = autocorr.max()/10\n",
+    "increment_fine   = autocorr.max()/100\n",
+    "\n",
+    "# Assume we start with 1 contour visible \n",
+    "num_contours = 1\n",
+    "\n",
+    "# Step down threshold until we see the 3 contours we expect\n",
+    "while (num_contours != 3):\n",
+    "    # Decrement the threshold\n",
+    "    threshold = threshold - increment_fine\n",
+    "    \n",
+    "    # Calculate indices in image above threshold\n",
+    "    above_thresh_i = autocorr > threshold\n",
+    "    \n",
+    "    # Create thresholded image\n",
+    "    autocorr_thresh = np.zeros(np.shape(autocorr))\n",
+    "    autocorr_thresh[above_thresh_i] = 255\n",
+    "    autocorr_thresh = autocorr_thresh.astype(np.uint8)\n",
+    "    \n",
+    "    # Find contours of threshold image\n",
+    "    im,contours,hierarchy = cv2.findContours(autocorr_thresh,cv2.RETR_TREE,cv2.CHAIN_APPROX_SIMPLE)\n",
+    "    num_contours = len(contours)\n",
+    "    \n",
+    "    if threshold < 0:\n",
+    "        print(\"Error in finding 3 contours\")\n",
+    "        sys.exit()\n",
+    "        \n",
+    "# Calculate indices in image above threshold\n",
+    "above_thresh_i = autocorr > threshold\n",
+    "    \n",
+    "# Create thresholded image\n",
+    "autocorr_thresh = np.zeros(np.shape(autocorr))\n",
+    "autocorr_thresh[above_thresh_i] = 255\n",
+    "autocorr_thresh = autocorr_thresh.astype(np.uint8)\n",
+    "        \n",
+    "#print(threshold)\n",
+    "#plt.imshow(autocorr_thresh)\n",
+    "\n",
+    "# Now we've found our 3 main contours. Keep stepping down until we don't see 3 anymore\n",
+    "# Can be less than 3 if they start to blend together, or more than 3 if other noise in\n",
+    "#  image appears\n",
+    "while (num_contours == 3):\n",
+    "    # Decrement the threshold\n",
+    "    threshold = threshold - increment_fine\n",
+    "    \n",
+    "    # Calculate indices in image above threshold\n",
+    "    above_thresh_i = autocorr > threshold\n",
+    "    \n",
+    "    # Create thresholded image\n",
+    "    autocorr_thresh = np.zeros(np.shape(autocorr))\n",
+    "    autocorr_thresh[above_thresh_i] = 255\n",
+    "    autocorr_thresh = autocorr_thresh.astype(np.uint8)\n",
+    "    \n",
+    "    # Find contours of threshold image\n",
+    "    im,contours,hierarchy = cv2.findContours(autocorr_thresh,cv2.RETR_TREE,cv2.CHAIN_APPROX_SIMPLE)\n",
+    "    num_contours = len(contours)\n",
+    "    \n",
+    "    if threshold < 0:\n",
+    "        print(\"Error in moving threshold below 3 contours\")\n",
+    "        sys.exit()\n",
+    "        \n",
+    "# Calculate indices in image above threshold\n",
+    "above_thresh_i = autocorr > threshold\n",
+    "    \n",
+    "# Create thresholded image\n",
+    "autocorr_thresh = np.zeros(np.shape(autocorr))\n",
+    "autocorr_thresh[above_thresh_i] = 255\n",
+    "autocorr_thresh = autocorr_thresh.astype(np.uint8)\n",
+    "        \n",
+    "#print(threshold)\n",
+    "#plt.imshow(autocorr_thresh)\n",
+    "\n",
+    "# Step back up in threshold until we are back to 3 contours\n",
+    "while (num_contours != 3):\n",
+    "    # Decrement the threshold\n",
+    "    threshold = threshold + increment_fine\n",
+    "    \n",
+    "    # Calculate indices in image above threshold\n",
+    "    above_thresh_i = autocorr > threshold\n",
+    "    \n",
+    "    # Create thresholded image\n",
+    "    autocorr_thresh = np.zeros(np.shape(autocorr))\n",
+    "    autocorr_thresh[above_thresh_i] = 255\n",
+    "    autocorr_thresh = autocorr_thresh.astype(np.uint8)\n",
+    "    \n",
+    "    # Find contours of threshold image\n",
+    "    im,contours,hierarchy = cv2.findContours(autocorr_thresh,cv2.RETR_TREE,cv2.CHAIN_APPROX_SIMPLE)\n",
+    "    num_contours = len(contours)    \n",
+    "    \n",
+    "    if threshold > autocorr.max():\n",
+    "        print(\"Error in moving threshold back up to 3 contours\")\n",
+    "        sys.exit()\n",
+    "\n",
+    "# Calculate indices in image above threshold\n",
+    "above_thresh_i = autocorr > threshold\n",
+    "    \n",
+    "# Create thresholded image\n",
+    "autocorr_thresh = np.zeros(np.shape(autocorr))\n",
+    "autocorr_thresh[above_thresh_i] = 1\n",
+    "autocorr_thresh = autocorr_thresh.astype(np.uint8)\n",
+    "\n",
+    "# Display results\n",
+    "print(\"Final Threshold = \",threshold)\n",
+    "plt.figure(figsize=(8,8))\n",
+    "plt.imshow(np.multiply(autocorr_thresh,autocorr))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "## Now that we have the contours, we want to find their centroids for sorting purposes\n",
+    "centroid = np.zeros((3,2))\n",
+    "\n",
+    "for i in np.arange(3):\n",
+    "    # Calculating Image Moment/Raw Moment of contour\n",
+    "    M = cv2.moments(contours[i])\n",
+    "    \n",
+    "    # Calculate centroid X and Y components \n",
+    "    cx = int(M['m10']/M['m00'])\n",
+    "    cy = int(M['m01']/M['m00'])\n",
+    "    \n",
+    "    centroid[i] = (cy, cx)\n",
+    "    \n",
+    "## Find the central contour\n",
+    "# Center pixel indices\n",
+    "center = np.divide(np.shape(autocorr),2)\n",
+    "center_distance = np.zeros(3)\n",
+    "\n",
+    "# Calculate distance from each centroid to center of image\n",
+    "for i in np.arange(3):\n",
+    "    center_distance[i] = np.linalg.norm(centroid[i] - center)\n",
+    "\n",
+    "# Get index of central contour as contour with min distance to center\n",
+    "i = np.where(center_distance == center_distance.min())\n",
+    "i_center = i[0]\n",
+    "\n",
+    "# Calculate central contour mask\n",
+    "mask_center = np.zeros(np.shape(autocorr))\n",
+    "cv2.drawContours(mask_center,contours,i_center,(1,1,1),-1)\n",
+    "\n",
+    "## Finding indices of side lobes\n",
+    "# Possible indices of side lobes\n",
+    "i_side_lobes = [0,1,2]\n",
+    "# Remove the center lobe index\n",
+    "i_side_lobes.remove(i_center)\n",
+    "\n",
+    "# Make empty mask images\n",
+    "mask_side = np.zeros((2,np.shape(autocorr)[0],np.shape(autocorr)[1]))\n",
+    "lobe_side = np.zeros((2,np.shape(autocorr)[0],np.shape(autocorr)[1]))\n",
+    "\n",
+    "# Create masks and calculate side lobes\n",
+    "for i in np.arange(2):\n",
+    "    cv2.drawContours(mask_side[i],contours,i_side_lobes[i],(1,1,1),-1)\n",
+    "    lobe_side[i] = (np.multiply(autocorr,mask_side[i]))#.astype(np.uint8)\n",
+    "\n",
+    "# Display masked side lobes\n",
+    "plt.figure(figsize=(12,6))\n",
+    "plt.subplot(1,2,1)\n",
+    "plt.imshow(lobe_side[0])\n",
+    "plt.title(\"Side Lobe 1\")\n",
+    "plt.subplot(1,2,2)\n",
+    "plt.imshow(lobe_side[1])\n",
+    "plt.title(\"Side Lobe 2\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "## Calculating intensity weighted centroid of side lobes, using entire contour\n",
+    "\n",
+    "M00 = np.zeros((2))\n",
+    "M10 = np.zeros((2))\n",
+    "M01 = np.zeros((2))\n",
+    "centroid = np.zeros((2,2))\n",
+    "\n",
+    "# Calculate for each side lobe\n",
+    "for lobe in np.arange(2):\n",
+    "    \n",
+    "    # Calculate average\n",
+    "    M00[lobe] = np.sum(lobe_side[lobe])\n",
+    "    \n",
+    "    # Calculate X component\n",
+    "    # Loop through each column\n",
+    "    for column in np.arange(np.shape(lobe_side[lobe])[1]):\n",
+    "        \n",
+    "        M10[lobe] += np.multiply(column,np.sum(lobe_side[lobe,:,column]))\n",
+    "        \n",
+    "        #print('X = ', column, np.multiply(column,np.sum(lobe_side[lobe,:,column])))\n",
+    "    \n",
+    "    # Calculate Y component\n",
+    "    # Loop through each column\n",
+    "    for row in np.arange(np.shape(lobe_side[lobe])[0]):\n",
+    "        \n",
+    "        M01[lobe] += np.multiply(row,np.sum(lobe_side[lobe,row,:]))\n",
+    "    \n",
+    "    # Calculate X and Y Centroid Components of each lobe\n",
+    "    centroid[lobe,0] = M10[lobe]/M00[lobe] # X Component\n",
+    "    centroid[lobe,1] = M01[lobe]/M00[lobe] # Y Component\n",
+    "\n",
+    "# Print results of centroid finding\n",
+    "print(M00)\n",
+    "print(M10)\n",
+    "print(M01)\n",
+    "print(centroid[0,0], centroid[0,1])\n",
+    "print(centroid[1,0], centroid[1,1])\n",
+    "\n",
+    "# Print original image with centroid locations overlayed\n",
+    "autocorr_cen = np.array(autocorr)\n",
+    "lobe_cen = np.array(lobe_side)\n",
+    "\n",
+    "# Put lines on X coordinates of centroids\n",
+    "autocorr_cen[:,np.round(centroid[0,0]).astype(int)] = 0\n",
+    "autocorr_cen[:,np.round(centroid[1,0]).astype(int)] = 0\n",
+    "# Put lines on Y coordinates of centroids\n",
+    "autocorr_cen[np.round(centroid[0,1]).astype(int),:] = 0\n",
+    "autocorr_cen[np.round(centroid[1,1]).astype(int),:] = 0\n",
+    "\n",
+    "# Put lines on sidelobe 0\n",
+    "lobe_cen[0,:,np.round(centroid[0,0]).astype(int)] = 0\n",
+    "lobe_cen[0,np.round(centroid[0,1]).astype(int),:] = 0\n",
+    "\n",
+    "# Put lines on sidelobe 1\n",
+    "lobe_cen[1,:,np.round(centroid[1,0]).astype(int)] = 0\n",
+    "lobe_cen[1,np.round(centroid[1,1]).astype(int),:] = 0\n",
+    "\n",
+    "# Graph all centroid marked plots\n",
+    "plt.figure(figsize=(20,8))\n",
+    "\n",
+    "plt.subplot(1,3,1)\n",
+    "plt.imshow(lobe_cen[0])\n",
+    "plt.title(\"Sidelobe 0 Centroid Location\")\n",
+    "\n",
+    "plt.subplot(1,3,2)\n",
+    "plt.imshow(lobe_cen[1])\n",
+    "plt.title(\"Sidelobe 1 Centroid Location\")\n",
+    "\n",
+    "plt.subplot(1,3,3)\n",
+    "plt.imshow(autocorr_cen)\n",
+    "plt.title(\"Both Sidelobe Centroid Locations\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "## Finding radius of circle centered on centroid that fits inside contour\n",
+    "\n",
+    "lobe_mask_radius = np.zeros(2) # Radius of circles to be calculated \n",
+    "lobe_mask_radius.fill(math.inf) # Initial value = Infinite\n",
+    "\n",
+    "# Calculate for each side lobe\n",
+    "for i in np.arange(2):\n",
+    "    # For each point on contour\n",
+    "    for perimeter_point in contours[i_side_lobes[i]]: \n",
+    "        # Calculating distance between calculated centroid and present contour point\n",
+    "        distance = np.linalg.norm(perimeter_point - centroid[i])\n",
+    "        # Save the minimum value of previously calculated min radius and present calc\n",
+    "        lobe_mask_radius[i] = min([lobe_mask_radius[i],distance])\n",
+    "     \n",
+    "print(lobe_mask_radius)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Recursively find the centroid 3 more times. \n",
+    "# Use the previously calculated centroid as the center of the circular aperture, \n",
+    "#  whose diameter was calculated above\n",
+    "\n",
+    "# Loop 3 times\n",
+    "for j in np.arange(3):\n",
+    "\n",
+    "    # Creating masked images of side lobes\n",
+    "    # Start with blank images\n",
+    "    lobe_side_masked = np.zeros((2,512,512))\n",
+    "\n",
+    "    # Creating fully filled in mask\n",
+    "    peak_mask = np.zeros((2,512,512,3))\n",
+    "\n",
+    "    # Marking the mask with circles centered on peaks\n",
+    "    cv2.circle(peak_mask[0], (centroid[0,0].astype(np.uint16),centroid[0,1].astype(np.uint16)), lobe_mask_radius[0].astype(np.uint8), (1,1,1), -1)\n",
+    "    cv2.circle(peak_mask[1], (centroid[1,0].astype(np.uint16),centroid[1,1].astype(np.uint16)), lobe_mask_radius[1].astype(np.uint8), (1,1,1), -1)\n",
+    "\n",
+    "    # Apply the mask to the autocorrelogram\n",
+    "    lobe_side_masked[0] = peak_mask[0,:,:,0]*lobe_side[0]\n",
+    "    lobe_side_masked[1] = peak_mask[1,:,:,0]*lobe_side[1]\n",
+    "    \n",
+    "    ## Calculating intensity weighted centroid of side lobes, with circular masking\n",
+    "\n",
+    "    M00 = np.zeros((2))\n",
+    "    M10 = np.zeros((2))\n",
+    "    M01 = np.zeros((2))\n",
+    "    centroid = np.zeros((2,2))\n",
+    "\n",
+    "    # Calculate for each side lobe\n",
+    "    for lobe in np.arange(2):\n",
+    "\n",
+    "        # Calculate average\n",
+    "        M00[lobe] = np.sum(lobe_side_masked[lobe])\n",
+    "\n",
+    "        # Calculate X component\n",
+    "        # Loop through each column\n",
+    "        for column in np.arange(np.shape(lobe_side_masked[lobe])[1]):\n",
+    "\n",
+    "            M10[lobe] += np.multiply(column,np.sum(lobe_side_masked[lobe,:,column]))\n",
+    "\n",
+    "        # Calculate Y component\n",
+    "        # Loop through each column\n",
+    "        for row in np.arange(np.shape(lobe_side[lobe])[0]):\n",
+    "\n",
+    "            M01[lobe] += np.multiply(row,np.sum(lobe_side_masked[lobe,row,:]))\n",
+    "\n",
+    "        # Calculate X and Y Centroid Components of each lobe\n",
+    "        centroid[lobe,0] = M10[lobe]/M00[lobe] # X Component\n",
+    "        centroid[lobe,1] = M01[lobe]/M00[lobe] # Y Component\n",
+    "        \n",
+    "    print(\"Iteration: \", j)\n",
+    "    print(centroid)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For k = 0: \n",
+    "\n",
+    "\n",
+    "Iteration:  0 <br/>\n",
+    "[[ 403.22224796  405.48294385]<br/>\n",
+    " [ 108.31065958  106.05485897]]<br/>\n",
+    "Iteration:  1<br/>\n",
+    "[[ 403.22224796  405.48294385]<br/>\n",
+    " [ 108.31065958  106.05485897]]<br/>\n",
+    "Iteration:  2<br/>\n",
+    "[[ 403.22224796  405.48294385]<br/>\n",
+    " [ 108.31065958  106.05485897]]<br/>\n",
+    " \n",
+    "These results are fairly similar to the data from 15-12-28_centroids.ipynb: \n",
+    "\n",
+    "k = 0: <br />\n",
+    "Centroids (Sphere centered on peak) <br />\n",
+    " [[ 403.24772626  405.91946966]<br />\n",
+    " [ 108.75227374  106.08053034]]<br />\n",
+    "Centroids (Contours) <br />\n",
+    " [[ 403.37878518  405.93153327]<br />\n",
+    " [ 108.62121482  106.06846673]]<br />\n",
+    " \n",
+    "I will say this centroid finding algorithm is complete. Just need to turn this into functions now"
    ]
   }
  ],
