Added posType and starType tuples

--- a/16-01-05 Astrometry.ipynb
+++ b/16-01-05 Astrometry.ipynb
@@ -54,6 +54,7 @@
     "from speckle_fns import deconv0,deconv1, postprocess\n",
     "from speckle_fns import filter_lpf, filter_hpf, filter_interference\n",
     "from speckle_fns import fits_view\n",
+    "from collections import namedtuple\n",
     "import sys\n",
     "import cv2\n",
     "import math\n",
@@ -98,11 +99,9 @@
    "source": [
     "# Select which set of data to work with\n",
     "\n",
-    "k = 0\n",
+    "k = 3\n",
     "\n",
-    "centroid = centroids[k]\n",
-    "thetaC = thetaCs[k]\n",
-    "rhoC = rhoCs[k]"
+    "centroid = centroids[k]"
    ]
   },
   {
@@ -119,6 +118,28 @@
     "# Create blank image\n",
     "img = np.zeros((512,512,3), np.uint8)\n",
     "\n",
+    "# posType struct is for holding the position of anything\n",
+    "#  Position may be represented in Cartesian or Polar coordinates\n",
+    "#  Want to be able to store both kinda of coordinates\n",
+    "posType = namedtuple('posType',\"theta rho x y\") \n",
+    "\n",
+    "# starType struct is for holding position of a star\n",
+    "#  A star has coordinates in camera (in pixels) and also\n",
+    "#  in the observed sky (in arcseconds)\n",
+    "starType = namedtuple('starType',\"cam sky\")\n",
+    "\n",
+    "# Struct for the expected star position\n",
+    "expectedPos = starType(posType,posType)\n",
+    "# Assigning position values from previous data\n",
+    "expectedPos.sky.theta = thetaCs[k]\n",
+    "expectedPos.sky.rho = rhoCs[k]\n",
+    "\n",
+    "# Calculate camera locations of expected star pos\n",
+    "expectedPos.cam.theta = expectedPos.sky.theta-delta\n",
+    "expectedPos.cam.rho = expectedPos.sky.rho/E\n",
+    "expectedPos.cam.x = expectedPos.cam.rho * np.cos(np.radians(expectedPos.sky.theta-90))\n",
+    "expectedPos.cam.y = expectedPos.cam.rho * np.sin(np.radians(expectedPos.sky.theta-90))\n",
+    "\n",
     "# Parameters for marking objects\n",
     "circle_radius = 11 # Radius of circle around location\n",
     "circle_border = 1 # Border of circle around location\n",
@@ -129,12 +150,11 @@
     "cv2.circle(img, (centroid[0,0].astype(np.uint16),centroid[0,1].astype(np.uint16)), circle_radius, color_centroid, circle_border)\n",
     "cv2.circle(img, (centroid[1,0].astype(np.uint16),centroid[1,1].astype(np.uint16)), circle_radius, color_centroid, circle_border)\n",
     "\n",
-    "# Calculate pixel locations of expected secondary location\n",
-    "thetaC_camera = thetaC-delta\n",
-    "rhoC_camera = rhoC/E\n",
+    "# Mark expected star location on image\n",
+    "cv2.circle(img, (expectedPos.cam.x.astype(np.uint8),expectedPos.cam.y.astype(np.uint8)),circle_radius, color_secondaryC, circle_border)\n",
     "\n",
-    "print(\"thetaC_camera=\",thetaC_camera, \"degrees\")\n",
-    "print(\"rhoC_camera=\",rhoC_camera, \"pixels\")\n",
+    "print(expectedPos.cam.x)\n",
+    "print(expectedPos.cam.y)\n",
     "\n",
     "plt.figure(figsize=(10,10))\n",
     "plt.imshow(img)"
