Viewing expected locations correctly

--- a/16-01-05 Astrometry.ipynb
+++ b/16-01-05 Astrometry.ipynb
@@ -99,9 +99,24 @@
    "source": [
     "# Select which set of data to work with\n",
     "\n",
-    "k = 3\n",
+    "k = 2\n",
     "\n",
     "centroid = centroids[k]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Functions used in this file\n",
+    "\n",
+    "# convert float pixel indices to rounded, uint8 values\n",
+    "def pixelRound(val):\n",
+    "    return (np.round(val)).astype(np.int16)"
    ]
   },
   {
@@ -137,8 +152,14 @@
     "# Calculate camera locations of expected star pos\n",
     "expectedPos.cam.theta = expectedPos.sky.theta-delta\n",
     "expectedPos.cam.rho = expectedPos.sky.rho/E\n",
-    "expectedPos.cam.x = expectedPos.cam.rho * np.cos(np.radians(expectedPos.sky.theta-90))\n",
-    "expectedPos.cam.y = expectedPos.cam.rho * np.sin(np.radians(expectedPos.sky.theta-90))\n",
+    "expectedPos.cam.x = 256 + expectedPos.cam.rho * np.cos(np.radians(expectedPos.sky.theta-90))\n",
+    "expectedPos.cam.y = 256 - expectedPos.cam.rho * np.sin(np.radians(expectedPos.sky.theta-90))\n",
+    "\n",
+    "print(expectedPos.cam.x)\n",
+    "print(expectedPos.cam.y)\n",
+    "\n",
+    "print(pixelRound(expectedPos.cam.x))\n",
+    "print(pixelRound(expectedPos.cam.y))\n",
     "\n",
     "# Parameters for marking objects\n",
     "circle_radius = 11 # Radius of circle around location\n",
@@ -151,13 +172,23 @@
     "cv2.circle(img, (centroid[1,0].astype(np.uint16),centroid[1,1].astype(np.uint16)), circle_radius, color_centroid, circle_border)\n",
     "\n",
     "# Mark expected star location on image\n",
-    "cv2.circle(img, (expectedPos.cam.x.astype(np.uint8),expectedPos.cam.y.astype(np.uint8)),circle_radius, color_secondaryC, circle_border)\n",
-    "\n",
-    "print(expectedPos.cam.x)\n",
-    "print(expectedPos.cam.y)\n",
+    "cv2.circle(img, (pixelRound(expectedPos.cam.x),pixelRound(expectedPos.cam.y)),circle_radius, color_secondaryC, circle_border)\n",
     "\n",
     "plt.figure(figsize=(10,10))\n",
     "plt.imshow(img)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "print(expectedPos.cam.x)\n",
+    "print(expectedPos.cam.x.astype(np.uint8))\n",
+    "print(pixelRound(expectedPos.cam.x))"
    ]
   }
  ],
