Created star position and star classes

--- a/16-01-05 Astrometry.ipynb
+++ b/16-01-05 Astrometry.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -99,24 +99,77 @@
    "source": [
     "# Select which set of data to work with\n",
     "\n",
-    "k = 2\n",
+    "k = 3\n",
     "\n",
     "centroid = centroids[k]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "# Functions used in this file\n",
+    "# Functions & structs used in this file\n",
     "\n",
     "# convert float pixel indices to rounded, uint8 values\n",
     "def pixelRound(val):\n",
-    "    return (np.round(val)).astype(np.int16)"
+    "    return (np.round(val)).astype(np.int16)\n",
+    "\n",
+    "# convert theta and rho values to image x and y coordinates\n",
+    "def polar2cart(rho, theta, imgSize):\n",
+    "    midpoint = imgSize/2 # Centered on midpoint of image\n",
+    "    x = midpoint + (rho * np.cos(np.radians(theta-90)))\n",
+    "    # Subtraction because positive direction of image is down on screen\n",
+    "    y = midpoint - (rho * np.sin(np.radians(theta-90)))\n",
+    "    \n",
+    "    return (x,y)\n",
+    "\n",
+    "# posType struct is for holding the position of anything\n",
+    "#  Position may be represented in Cartesian or Polar coordinates\n",
+    "#  Want to be able to store both kinda of coordinates\n",
+    "class posType:\n",
+    "    def __init__(self, midpoint=None, theta=None, rho=None, x=None, y=None):\n",
+    "        self.theta = theta\n",
+    "        self.rho = rho\n",
+    "        self.x = x\n",
+    "        self.y = y\n",
+    "        self.midpoint = midpoint\n",
+    "        \n",
+    "    # Orbital plot has 0deg pointing down on the screen [resulting in 90deg shift]\n",
+    "    # Theta rotates counterclockwise from 0deg\n",
+    "    # Positive pixel direction is downward [resulting in Y phase reversal]\n",
+    "    # Polar coordinates centered on middle pixel of image\n",
+    "        \n",
+    "    # convert theta and rho values to image x and y coordinates    \n",
+    "    def polar2cart(self):\n",
+    "        self.x = self.midpoint + (self.rho * np.cos(np.radians(self.theta-90)))\n",
+    "        self.y = self.midpoint - (self.rho * np.sin(np.radians(self.theta-90)))\n",
+    "        \n",
+    "    # convert x and y coordinates to theta and rho values\n",
+    "    def cart2polar(self):\n",
+    "        # Get cartesians centered on 0 for calculations\n",
+    "        x = self.x-self.midpoint\n",
+    "        y = self.midpoint-self.y\n",
+    "        \n",
+    "        self.rho = np.linalg.norm((x,y))\n",
+    "        self.theta = np.degrees(np.arctan(y/x))+90\n",
+    "        # Add 180 deg if in quadrants 2 or 3\n",
+    "        self.theta = (x<0)*180 + self.theta\n",
+    "        \n",
+    "# starType struct is for holding position of a star\n",
+    "#  A star has coordinates in camera (in pixels) and also\n",
+    "#  in the observed sky (in arcseconds)\n",
+    "#starType = namedtuple('starType',\"cam sky error\")\n",
+    "class starType:\n",
+    "    def __init__(self, mid = None, error=None, E=None, delta=None):\n",
+    "        self.cam = posType(midpoint = mid)\n",
+    "        self.sky = posType(midpoint = mid)\n",
+    "        self.error = error\n",
+    "        self.E = E\n",
+    "        self.delta = delta\n"
    ]
   },
   {
@@ -131,20 +184,12 @@
     "## Displaying calculated centroid values along with expected secondary star locations\n",
     "\n",
     "# Create blank image\n",
-    "img = np.zeros((512,512,3), np.uint8)\n",
+    "imgDim = 512\n",
+    "img = np.zeros((imgDim,imgDim,3), np.uint8)\n",
     "\n",
-    "# posType struct is for holding the position of anything\n",
-    "#  Position may be represented in Cartesian or Polar coordinates\n",
-    "#  Want to be able to store both kinda of coordinates\n",
-    "posType = namedtuple('posType',\"theta rho x y\") \n",
+    "# Object for the expected star position\n",
+    "expectedPos = starType(mid = imgDim/2)\n",
     "\n",
-    "# starType struct is for holding position of a star\n",
-    "#  A star has coordinates in camera (in pixels) and also\n",
-    "#  in the observed sky (in arcseconds)\n",
-    "starType = namedtuple('starType',\"cam sky\")\n",
-    "\n",
-    "# Struct for the expected star position\n",
-    "expectedPos = starType(posType,posType)\n",
     "# Assigning position values from previous data\n",
     "expectedPos.sky.theta = thetaCs[k]\n",
     "expectedPos.sky.rho = rhoCs[k]\n",
@@ -152,14 +197,8 @@
     "# Calculate camera locations of expected star pos\n",
     "expectedPos.cam.theta = expectedPos.sky.theta-delta\n",
     "expectedPos.cam.rho = expectedPos.sky.rho/E\n",
-    "expectedPos.cam.x = 256 + expectedPos.cam.rho * np.cos(np.radians(expectedPos.sky.theta-90))\n",
-    "expectedPos.cam.y = 256 - expectedPos.cam.rho * np.sin(np.radians(expectedPos.sky.theta-90))\n",
-    "\n",
-    "print(expectedPos.cam.x)\n",
-    "print(expectedPos.cam.y)\n",
-    "\n",
-    "print(pixelRound(expectedPos.cam.x))\n",
-    "print(pixelRound(expectedPos.cam.y))\n",
+    "# Converting to cartesian\n",
+    "expectedPos.cam.polar2cart()\n",
     "\n",
     "# Parameters for marking objects\n",
     "circle_radius = 11 # Radius of circle around location\n",
@@ -180,15 +219,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Polar Coords:\n",
+      "50 0\n",
+      "Converting to Cartesian\n",
+      "Cartesian Coords:\n",
+      "256.0 306.0\n",
+      "Converting to Polar\n",
+      "Polar Coords:\n",
+      "50.0 0.0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/niels/anaconda3/envs/speckle/lib/python3.5/site-packages/ipykernel/__main__.py:44: RuntimeWarning: divide by zero encountered in double_scalars\n"
+     ]
+    }
+   ],
    "source": [
-    "print(expectedPos.cam.x)\n",
-    "print(expectedPos.cam.x.astype(np.uint8))\n",
-    "print(pixelRound(expectedPos.cam.x))"
+    "\n",
+    "expectedPos = starType(mid = 512/2)\n",
+    "\n",
+    "expectedPos.cam.rho = 50\n",
+    "expectedPos.cam.theta = 0\n",
+    "print(\"Polar Coords:\")\n",
+    "print(expectedPos.cam.rho, expectedPos.cam.theta)\n",
+    "\n",
+    "print(\"Converting to Cartesian\")\n",
+    "expectedPos.cam.polar2cart()\n",
+    "\n",
+    "print(\"Cartesian Coords:\")\n",
+    "print(expectedPos.cam.x, expectedPos.cam.y)\n",
+    "\n",
+    "print(\"Converting to Polar\")\n",
+    "expectedPos.cam.cart2polar()\n",
+    "\n",
+    "print(\"Polar Coords:\")\n",
+    "print(expectedPos.cam.rho, expectedPos.cam.theta)"
    ]
   }
  ],
